--- a/HW-3-1/HW-3-1.vcxproj
+++ b/HW-3-1/HW-3-1.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Polynomial.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="color.hpp" />
     <ClInclude Include="Polynomial.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
