--- a/HW-3-1/HW-3-1.vcxproj.filters
+++ b/HW-3-1/HW-3-1.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Polynomial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="color.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
